Add cat file generation for pdf drivers
git-svn-id: file:///home/code/svn/ovd/trunk@8277 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/windows/pdf-printer-driver-amd64/package.conf
+++ b/packaging/windows/pdf-printer-driver-amd64/package.conf
@@ -11,6 +11,9 @@ source_remove_files:
 compile_commands:
   - call make64.bat
 
+post_dist_commads:
+  - inf2cat /drv:. /os:XP_X64,Server2003_X64,Vista_X64,Server2003_IA64 /v
+
 binary_files:
   - ulteo.ppd
   - ulteodll.inf
