--- a/packaging/windows/pdf-printer-driver-x86/package.conf
+++ b/packaging/windows/pdf-printer-driver-x86/package.conf
@@ -12,6 +12,9 @@ source_remove_files:
 compile_commands:
   - call make86.bat
 
+post_dist_commads:
+  - inf2cat /drv:. /os:XP_X86,2000,Server2003_X86,Vista_X86 /v
+
 binary_files:
   - ulteo.ppd
   - ulteodll.inf
