Improvement: no more XML error returned in admin console
git-svn-id: file:///home/code/svn/ovd/trunk@8297 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/classes/Makefile.am
+++ b/SessionManager/web/classes/Makefile.am
@@ -6,6 +6,7 @@ scripts_DATA = Application.class.php \
                Application_weblink.class.php \
                AppsGroup.class.php \
                ConfigElement.class.php \
+               ErrorManager.class.php \
                FileTailer.class.php \
                HttpRequest.class.php \
                LDAP.class.php \
