Bugfix: forgot Makefile.am modification in r8330
git-svn-id: file:///home/code/svn/ovd/trunk@8331 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -105,7 +105,7 @@ scripts_DATA = ad.png \
                gu.png \
                gw.png \
                gy.png \
-               he.png \
+               he-il.png \
                hi.png \
                hk.png \
                hn.png \
