--- a/SessionManager/web/admin/init/demo.php.in
+++ b/SessionManager/web/admin/init/demo.php.in
@@ -4,6 +4,7 @@
  * http://www.ulteo.com
  * Author Laurent CLOUET <laurent@ulteo.com> 2008-2010
  * Author Julien LANGLOIS <julien@ulteo.com> 2012
+ * Author David PHAM-VAN <d.pham-van@ulteo.com> 2012
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -79,7 +80,15 @@ if ($ret !== true) {
 }
 
 // server
-$server = Abstract_Server::load('127.0.0.1');
+
+// try to get server several times, APS start could take some time.
+for ($i=0; $i < 10; $i++){
+	$server = Abstract_Server::load('127.0.0.1');
+	if (is_object($server))
+		break;
+	sleep(3);	
+}
+
 if (! is_object($server)) {
 	Logger::error('main', 'demo.php failed to load server');
 	die();
