Provide Smartcard redirection over RDP for both Linux and Windows clients.
git-svn-id: file:///home/code/svn/ovd/trunk@8353 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/linux/archive-native-client/archive.conf
+++ b/packaging/linux/archive-native-client/archive.conf
@@ -16,6 +16,8 @@ arch:
         32:
           packages:
             - ovd-java-jni-32
+            - ovd-jni-pcsc-32
         64:
           packages:
             - ovd-java-jni-64
+            - ovd-jni-pcsc-64
