--- a/packaging/windows/setup-native-client-standalone/setup.conf
+++ b/packaging/windows/setup-native-client-standalone/setup.conf
@@ -4,6 +4,7 @@ arch:
     - ovd-native-client
     - ovd-integrated-launcher
     - ovd-java-jni
+    - ovd-jni-pcsc
     - ovd-wrapper
 
   childs:
