--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
- Copyright (C) 2008-2011 Ulteo SAS
+ Copyright (C) 2008-2012 Ulteo SAS
  http://www.ulteo.com
  Author Gauvain POCENTEK <gpocentek@linutop.com> 2008-2009
  Author Julien LANGLOIS <julien@ulteo.com> 2009-2010
@@ -9,6 +9,8 @@
  Author Thomas MOUTON <thomas@ulteo.com> 2010-2011
  Author David LECHEVALIER <david@ulteo.com> 2010-2011
  Author Guillaume DUPAS <guillaume@ulteo.com> 2010
+ Author Yann HODIQUE <y.hodique@ulteo.com> 2012
+ Author David PHAM-VAN <d.pham-van@ulteo.com> 2012
 
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
@@ -341,6 +343,14 @@
           todir="build/resources/LinuxLibs/64" failonerror="false" />
     <copy file="required_libraries/libXClientArea/64/libXClientArea.so"
           todir="build/resources/LinuxLibs/64" failonerror="false" />
+    <copy file="required_libraries/libPCSC/64/libPCSC.so"
+          todir="build/resources/LinuxLibs/64" failonerror="false" />
+    <copy file="required_libraries/libPCSC/64/libPCSC.dll"
+          todir="build/resources/WindowsLibs/64" failonerror="false" />
+    <copy file="required_libraries/libPCSC/32/libPCSC.so"
+          todir="build/resources/LinuxLibs/32" failonerror="false" />
+    <copy file="required_libraries/libPCSC/32/libPCSC.dll"
+          todir="build/resources/WindowsLibs/32" failonerror="false" />
     <copy file="required_libraries/jshortcut.dll"
           todir="build/resources/WindowsLibs/32" failonerror="false" />
     <copy file="required_libraries/ICE_JNIRegistry.dll"
@@ -415,6 +425,7 @@
         <include name="misc/**" />
         <include name="windowsPathsJNI/*" />
         <include name="libXClientArea/**" />
+        <include name="libPCSC/**" />
       </fileset>
     </copy>
     <tar destfile="${distdir}/${sdist.name}.tar" longfile="gnu"
