--- a/packaging/debian/ovd-native-client/precise/rules
+++ b/packaging/debian/ovd-native-client/precise/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-DEB_DH_INSTALL_SOURCEDIR = debian/ulteo-ovd-native-client
+DEB_DH_INSTALL_SOURCEDIR = debian/tmp
 
 include /usr/share/cdbs/1/class/ant.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
@@ -10,3 +10,9 @@ DEB_ANT_BUILD_TARGET = ovdNativeClient
 DEB_ANT_INSTALL_TARGET = ovdNativeClient.debian
 DEB_ANT_ARGS += -Dprefix=/usr -Dbuild.type=stripped -Ddestdir=$(DEB_DESTDIR) -Dlanguages=true
 DEB_JARS += $(ANT_HOME)/lib/ant-nodeps.jar # debian bug #420287
+
+build/libovd-smartcard::
+	cd libPCSC ; make clean ; make JDK_HOME=$(JAVA_HOME)
+
+install/libovd-smartcard::
+	cd libPCSC ; make install DESTDIR=$(CURDIR)/$(DEB_DH_INSTALL_SOURCEDIR)
