Code cleaning: move all non common code outside of common.js
git-svn-id: file:///home/code/svn/ovd/trunk@8376 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/script/Makefile.am
+++ b/client/web/web/media/script/Makefile.am
@@ -10,7 +10,10 @@ scripts_DATA = application.js \
                JavaTester.js \
                Logger.js \
                server.js \
-               timezones.js
+               timezones.js \
+               uovd_int_client.js \
+               uovd_ext_client.js
+               
 
 scriptsdir = $(datadir)/ulteo/webclient/media/script
 
