--- a/client/web/web/media/script/Makefile.am
+++ b/client/web/web/media/script/Makefile.am
@@ -4,6 +4,7 @@ scripts_DATA = application.js \
                common.js \
                daemon.js \
                daemon_applications.js \
+               daemon_applications_int.js \
                daemon_desktop.js \
                daemon_external.js \
                external.js \
