Bugfix: bad filename in Makefile.am for new file daemon_portal.js (introduced in r8386)
git-svn-id: file:///home/code/svn/ovd/trunk@8387 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/script/Makefile.am
+++ b/client/web/web/media/script/Makefile.am
@@ -4,9 +4,9 @@ scripts_DATA = application.js \
                common.js \
                daemon.js \
                daemon_applications.js \
-               daemon_applications_int.js \
                daemon_desktop.js \
                daemon_external.js \
+               daemon_portal.js \
                external.js \
                JavaTester.js \
                Logger.js \
