Add 128 pixels wide icon to linux version of the native client
git-svn-id: file:///home/code/svn/ovd/trunk@8400 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -267,6 +267,7 @@
     <copy file="misc/ulteo-ovd-native-client.desktop"
           todir="${datadir}/applications" />
     <copy file="icons/ulteo.png" todir="${datadir}/icons" />
+    <copy file="icons/ulteo-128.png" todir="${datadir}/icons" />
   </target>
 
   <target name="ovdNativeClient.jar" depends="ovdNativeClient">
