Add a VfsDllLoader to load dll. (However need to manually exit the loader). This commit works with the OVD SlaveServer which disable the folder redirection by the registry. The VfsHook.dll works when user runs an app and save his file to C:\Users\USER\Desktop, the file is going to be redirected to U:\Desktop.
git-svn-id: https://svn.ulteo.com/ovd-profile-management/trunk/Experiments/VFSHook@10 f32b00c4-d455-4074-84df-7750a88aa49e

--- a/ApplicationServer/windows/VFS/VFSHookLoader/VFSHookLoader.vcxproj
+++ b/ApplicationServer/windows/VFS/VFSHookLoader/VFSHookLoader.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{4D049F85-4268-45E6-83F4-917690C3D41C}</ProjectGuid>
-    <RootNamespace>VFSHookTester</RootNamespace>
+    <ProjectGuid>{30DA1326-F177-4E25-8733-0A81BF7A9B32}</ProjectGuid>
+    <RootNamespace>VFSHookLoader</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -41,12 +41,9 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>D:\boost_1_50_0\boost</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\boost_1_50_0\stage\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -55,13 +52,11 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>D:\boost_1_50_0\boost</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>D:\boost_1_50_0\stage\lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
