--- a/ApplicationServer/windows/VFS/VFSHookLoader/VFSHookLoader.vcxproj.filters
+++ b/ApplicationServer/windows/VFS/VFSHookLoader/VFSHookLoader.vcxproj.filters
@@ -5,6 +5,9 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="Header">
+      <UniqueIdentifier>{4f44fdf6-761d-485e-88c9-0cf2b3931001}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
