Make favicon.png a true png file and favicon.ico a true ms-icon multo-formats file. It is NOT a workaround for Internet Explorer to use a png named as .ico Deatils : http://blogs.msdn.com/b/jeffdav/archive/2007/03/01/why-doesn-t-the-favicon-for-my-site-appear-in-ie7.aspx
git-svn-id: file:///home/code/svn/ovd/trunk@8408 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/Makefile.am
+++ b/client/web/web/media/image/Makefile.am
@@ -5,6 +5,7 @@ scripts_DATA = close-wrap.png \
                cross.png \
                error.png \
                favicon.ico \
+               favicon.png \
                hide.png \
                loader.gif \
                logout.png \
