Compile minified version of javascripts and css with yui-compressor
git-svn-id: file:///home/code/svn/ovd/trunk@8410 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/script/Makefile.am
+++ b/client/web/web/media/script/Makefile.am
@@ -13,7 +13,8 @@ scripts_DATA = application.js \
                server.js \
                timezones.js \
                uovd_int_client.js \
-               uovd_ext_client.js
+               uovd_ext_client.js \
+               uovd.js
                
 
 scriptsdir = $(datadir)/ulteo/webclient/media/script
