Add expiration date header to webclient media files (http://developer.yahoo.com/performance/rules.html#expires)
git-svn-id: file:///home/code/svn/ovd/trunk@8427 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/config/apache2.conf.in
+++ b/client/web/config/apache2.conf.in
@@ -9,3 +9,10 @@ Alias /ovd @DATADIR@/ulteo/webclient
     DirectoryIndex index.php
     php_admin_flag magic_quotes_gpc Off
 </Directory>
+
+<Directory @DATADIR@/ulteo/webclient/media>
+    <IfModule mod_expires.c>
+        ExpiresActive On
+        ExpiresDefault "modification plus 1 years"
+    </IfModule>
+</Directory>
