--- a/client/web/web/media/image/Makefile.am
+++ b/client/web/web/media/image/Makefile.am
@@ -13,6 +13,7 @@ scripts_DATA = close-wrap.png \
                rotate.gif \
                show.png \
                suspend.png \
+               ulteo-small.png \
                ulteo.png
 
 scriptsdir = $(datadir)/ulteo/webclient/media/image
