Missing generated image in Makefile
git-svn-id: file:///home/code/svn/ovd/trunk@8440 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/Makefile.am
+++ b/client/web/web/media/image/Makefile.am
@@ -13,6 +13,7 @@ scripts_DATA = close-wrap.png \
                rotate.gif \
                show.png \
                suspend.png \
+               uovd.png \
                ulteo-small.png \
                ulteo.png
 
