Code cleaning: remove useless webservices (used for OVD 2.x)
git-svn-id: file:///home/code/svn/ovd/trunk@8479 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/webservices/Makefile.am
+++ b/SessionManager/web/webservices/Makefile.am
@@ -1,13 +1,11 @@
 scripts_DATA =  application_icon.php \
                 applications_static.php \
                 configuration.php \
-                domain.php \
                 server_monitoring.php \
                 server_name.php \
                 session_dump.php \
                 session_status.php \
-                server_status.php \
-                application.php
+                server_status.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/webservices
 EXTRA_DIST = $(scripts_DATA)
