Improvement: Add an option to enable/disable the frame marker feature
git-svn-id: file:///home/code/svn/ovd/trunk@8491 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/config/config.client.ini
+++ b/client/web/config/config.client.ini
@@ -8,6 +8,9 @@
 # useOffscreenCache = true|false
 # default is false
 
+# useFrameMarker = true|false
+# default is false
+
 # useBandwidthLimitation = true|false
 # default is false
 
