Improvement: Server id is not the fqdn anymore but a uniq ID, the fqdn can be change from the admin console (can be IP or name)
git-svn-id: file:///home/code/svn/ovd/trunk@8501 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/init/demo.php.in
+++ b/SessionManager/web/admin/init/demo.php.in
@@ -83,7 +83,7 @@ if ($ret !== true) {
 
 // try to get server several times, APS start could take some time.
 for ($i=0; $i < 10; $i++){
-	$server = Abstract_Server::load('127.0.0.1');
+	$server = Abstract_Server::load_by_fqdn('127.0.0.1');
 	if (is_object($server))
 		break;
 	sleep(3);	
