--- a/SessionManager/web/includes/Makefile.am
+++ b/SessionManager/web/includes/Makefile.am
@@ -4,7 +4,8 @@ scripts_DATA = defaults.inc.php \
                functions.inc.php \
 			   core.inc.php \
 			   core-minimal.inc.php \
-			   load_balancing.inc.php
+			   load_balancing.inc.php \
+			   webservices.inc.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/includes
 
@@ -12,7 +13,8 @@ EXTRA_DIST = defaults.inc.php.in \
              functions.inc.php \
 		     core.inc.php \
 		     core-minimal.inc.php \
-			 load_balancing.inc.php
+			 load_balancing.inc.php \
+			 webservices.inc.php
 
 defaults.inc.php:
 	sed -e "s,@SYSCONFDIR@,$(sysconfdir)," \
