Add a skel_directory option to Linux ApS role
git-svn-id: file:///home/code/svn/ovd/trunk@8516 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -35,6 +35,11 @@ level = error warn info debug
 # linux_icon_theme = 
 # use this icon theme by default for exported applications
 # default is CrystalGnome
+#
+# linux_skel_directory = 
+# use this direcotry for skel when create user home direcotry
+# default is /dev/null (no skel)
+# another wanted behavior can be /etc/skel
 
 
 [Gateway]
