Feature: add the desktop file which do the disconnect action
git-svn-id: file:///home/code/svn/ovd/trunk@8562 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/ApplicationServer/desktop/misc/Makefile.am
+++ b/ApplicationServer/desktop/misc/Makefile.am
@@ -1,4 +1,4 @@
-desktop_DATA = quit.desktop
+desktop_DATA = quit.desktop disconnect.desktop
 desktopdir =  $(localstatedir)/spool/menus-common/
 
 ulteoxdgconf_DATA = xinitrc
