Add registry redirection, configurable file/folder IO + registry IO + redirection disk.
git-svn-id: https://svn.ulteo.com/ovd-profile-management/trunk/Experiments/VFSHook@13 f32b00c4-d455-4074-84df-7750a88aa49e

--- a/ApplicationServer/windows/VFS/Example/VirtualSystem.conf
+++ b/ApplicationServer/windows/VFS/Example/VirtualSystem.conf
@@ -1,11 +1,27 @@
 ; ================================================================== ;
+; File system:
+; Set virtual file space disk path. Do not put \ at the end of path.
+;
+; Example: 
+; Redirecting USER_PROFILE path to X disk
+; [VirtualFileSpace]
+; Profile = X:
+;
+; Redirecting USER_PROFILE path to X:\Some\Path
+; [VirtualFileSpace]
+; Profile = X:\Some\Path
+; ================================================================== ;
+[VirtualFileSpace]
+Profile = D:
+
+; ================================================================== ;
+; File system:
 ; CSIDL blacklist settings
 ; 1 , enable path redirecting to disk U:\ 
 ; 0 , black list, not redirecting to disk U:\
 ; ================================================================== ;
-
 [CSIDL]
-CSIDL_DESKTOP 		= 0
+CSIDL_DESKTOP 		= 1
 CSIDL_PERSONAL 		= 1
 CSIDL_FAVORITES		= 0
 CSIDL_MYMUSIC		= 0
@@ -27,7 +43,9 @@ CONTACTS			= 0
 SAVED_GAMES		= 0
 
 ; ================================================================== ;
+; File system:
 ; Administrator defined black list for folder/file under UserProfile. Case sensitive.
+;
 ; Example: 
 ; Blocking 	C:\Users\USER\"user_create_folder_or_file" 
 ;		C:\Users\USER\"folder_or_file_starts_with_nt"
@@ -40,3 +58,18 @@ SAVED_GAMES		= 0
 
 [SELF_DEFINE]
 WINDOWS
+
+
+; ================================================================== ;
+; Registry system:
+; Administrator defined redirection list for registry key under HKEY_CURRENT_USER. Case sensitive.
+;
+; Example:
+; Redirect HK_CU\Software\AppReg to HK_CUulteo\AppReg
+;[Registry]
+;Software\AppReg = ulteo\AppReg
+; ================================================================== ;
+
+[Registry]
+Software\A	= 	Hook\A   
+
