--- a/ApplicationServer/windows/VFS/VFSHook/VFSHook.vcxproj
+++ b/ApplicationServer/windows/VFS/VFSHook/VFSHook.vcxproj
@@ -155,9 +155,11 @@
     <ClInclude Include="disasm-lib\disasm_x86.h" />
     <ClInclude Include="disasm-lib\disasm_x86_tables.h" />
     <ClInclude Include="disasm-lib\misc.h" />
-    <ClInclude Include="Hook.h" />
+    <ClInclude Include="InterceptAPI.h" />
+    <ClInclude Include="Logger.h" />
     <ClInclude Include="mhook-lib\mhook.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="VirtualFileSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="disasm-lib\cpu.c">
@@ -198,7 +200,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Hook.cpp" />
+    <ClCompile Include="InterceptAPI.cpp" />
+    <ClCompile Include="Logger.cpp" />
     <ClCompile Include="mhook-lib\mhook.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -206,6 +209,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="VirtualFileSystem.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
