Feature: Add new RDP option: 'networkConnectionType'
git-svn-id: file:///home/code/svn/ovd/trunk@8610 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/config/config.client.ini
+++ b/client/web/config/config.client.ini
@@ -30,6 +30,17 @@
 # use TLS encryption instead of RDP encryption
 #  default is false
 
+# networkConnectionType = [0-7]
+#  0 - Unknown connection type
+#  1 - Modem (56 Kbps)
+#  2 - Low-speed broadband (256 Kbps - 2 Mbps)
+#  3 - Satellite (2 Mbps - 16 Mbps with high latency)
+#  4 - High-speed broadband (2 Mbps - 10 Mbps)
+#  5 - WAN (10 Mbps or higher with high latency)
+#  6 - LAN (10 Mbps or higher)
+#  7 - The server SHOULD attempt to detect the connection type
+#  default is 0
+
 
 [persistentCache]
 # persistent cache option (if usePersistentCache is previously set to true)
