Bugfix session manager packaging since r8634
git-svn-id: file:///home/code/svn/ovd/trunk@8636 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/Makefile.am
+++ b/SessionManager/web/admin/Makefile.am
@@ -27,6 +27,8 @@ SUBDIRS += ha
 endif
 
 scripts_DATA = actions.php \
+               api.php \
+               api.wsdl \
                applications.php \
                applications_static.php \
                appsgroup.php \
