--- a/packaging/debian/ovd-session-manager/hardy/control
+++ b/packaging/debian/ovd-session-manager/hardy/control
@@ -2,7 +2,7 @@ Source: ovd-session-manager
 Section: net
 Priority: optional
 Maintainer: Samuel Bovée <samuel@ulteo.com>
-Build-Depends: debhelper (>= 6), cdbs, po-debconf, intltool
+Build-Depends: debhelper (>= 6), cdbs, po-debconf
 Standards-Version: 3.7.3
 
 Package: ulteo-ovd-session-manager
