Add plugins support to the SM
git-svn-id: file:///home/code/svn/ovd/trunk@8648 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/classes/Makefile.am
+++ b/SessionManager/web/classes/Makefile.am
@@ -16,6 +16,7 @@ scripts_DATA = Application.class.php \
                NetworkFolder.class.php \
                SQL.class.php \
                News.class.php \
+               Plugin.class.php \
                Preferences.class.php \
                Profile.class.php \
                ReportItems.class.php \
