--- a/SessionManager/web/includes/defaults.inc.php.in
+++ b/SessionManager/web/includes/defaults.inc.php.in
@@ -1,10 +1,11 @@
 <?php
 /**
- * Copyright (C) 2008-2012 Ulteo SAS
+ * Copyright (C) 2008-2013 Ulteo SAS
  * http://www.ulteo.com
  * Author Laurent CLOUET <laurent@ulteo.com> 2008-2011
  * Author Jeremy DESVAGES <jeremy@ulteo.com> 2008-2011
  * Author David LECHEVALIER <david@ulteo.com> 2012
+ * Author David PHAM-VAN <d.pham-van@ulteo.com> 2013
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -23,6 +24,7 @@
 define('OVD_SM_VERSION', '@OVD_VERSION@');
 
 define('SESSIONMANAGER_CONF_FILE', '@SYSCONFDIR@/ulteo/sessionmanager/config.inc.php');
+define('SESSIONMANAGER_PLUGINS_DIR', '@SYSCONFDIR@/ulteo/sessionmanager/plugins');
 
 define('DEFAULT_PAGE_TITLE', 'Open Virtual Desktop');
 
