Improvement: use a rsync filter file for Linux profiles sync so the admin can modify the rules
git-svn-id: file:///home/code/svn/ovd/trunk@8656 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/setup.py.in
+++ b/OvdServer/setup.py.in
@@ -95,7 +95,7 @@ elif sys.platform.startswith('linux'):
 @EXTRA_MODULES@
 	
 	setup_args["data_files"] = [
-		('/etc/ulteo/ovd', ['examples/slaveserver.conf']),
+		('/etc/ulteo/ovd', ['examples/slaveserver.conf', "examples/profiles_filter.conf"]),
 		('/usr/sbin', ['examples/ovd-slaveserver-config']),
 		('/usr/share/ulteo/ovd/slaveserver', [
 			'ulteo-ovd-slaveserver.py', 'ovd-slaveserver-role.py',
