Bugfix: correct the xdg user dir resolution

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -49,7 +49,7 @@ reject = ""
 path = /mnt/ulteo/ovd/$PROFILE_ID/Data
 
 # accept => path pattern accepted
-accept = "*"
+accept = "%DESKTOP/*"
 
 # reject => path pattern rejected
 reject = ""
