Feature: add the bind option

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -5,6 +5,14 @@ destination = $HOME
 # each value imply a dedicated section
 union = configuration, locale, data
 
+# authorize the mount on no empty directory.
+# the can be mountbind
+bind = true
+
+# destination of the mount bind
+# it can be a path or a section (start with @
+bindDestination = @locale
+
 [log]
 level = DEBUG
 program = RegularUnionFS
