deactivate the bind option

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -7,7 +7,7 @@ union = configuration, locale, data
 
 # authorize the mount on no empty directory.
 # the can be mountbind
-bind = true
+bind = false
 
 # destination of the mount bind
 # it can be a path or a section (start with @
