Bugfix: wrong regular expression

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -29,7 +29,7 @@ enableStdOutput = true
 path = /mnt/ulteo/ovd/$PROFILE_ID/conf.Linux
 
 # accept => path pattern accepted
-accept = "^\."
+accept = "^/\..*"
 
 # reject => path pattern rejected
 reject = ""
