disable the locale part

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -3,7 +3,7 @@ destination = $HOME
 # list of path involved in the union
 # separator must be ','.
 # each value imply a dedicated section
-union = configuration, locale, data
+union = configuration, data
 
 # authorize the mount on no empty directory.
 # the can be mountbind
@@ -35,18 +35,18 @@ accept = "^/\..*"
 reject = ""
 
 
-[locale]
+# [locale]
 # represent files not saved
 #
 
 # path => path to add
-path = /tmp/$PROFILE_ID
+# path = /tmp/$PROFILE_ID
 
 # accept => path pattern accepted
-accept = "^\."
+# accept = "^\."
 
 # reject => path pattern rejected
-reject = ""
+# reject = ""
 
 
 [data]
@@ -61,7 +61,4 @@ accept = "%DESKTOP/*"
 
 # reject => path pattern rejected
 reject = ""
-
-
-
 
