Improvement: manage xdg translation in disk operation

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -13,6 +13,11 @@ bind = false
 # it can be a path or a section (start with @
 bindDestination = @locale
 
+# manage transformation due to session language
+[translation]
+Desktop = "%DESKTOP"
+Document= "%DOCUMENTS"
+
 [log]
 level = DEBUG
 program = RegularUnionFS
