Bugfix: sm service URI was denied by apache (introduced in r8667)
git-svn-id: file:///home/code/svn/ovd/trunk@8669 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/config/apache2-admin.conf.in
+++ b/SessionManager/config/apache2-admin.conf.in
@@ -2,6 +2,12 @@
 
 Alias /ovd/service/admin/wsdl @DATADIR@/ulteo/sessionmanager/admin/api.wsdl
 Alias /ovd/service/admin      @DATADIR@/ulteo/sessionmanager/admin/api.php
+<Location /ovd/service/admin>
+    AllowOverride None
+    Order allow,deny
+    allow from all
+    php_admin_flag magic_quotes_gpc Off
+</Location>
 
 Alias /ovd/admin/base.tar.gz /var/cache/ulteo/sessionmanager/base.tar.gz
 <Location /ovd/admin/base.tar.gz>
