Remove non working and deprecated HA code from Session Manager
git-svn-id: file:///home/code/svn/ovd/trunk@8675 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/modules/Makefile.am
+++ b/SessionManager/web/modules/Makefile.am
@@ -44,11 +44,5 @@ scripts_DATA = ApplicationDB.php \
                UserGroupDBDynamic.php \
                UserGroupDBDynamicCached.php
 
-if HA
-scripts_DATA += HA.php
 
-hadir=$(datadir)/ulteo/sessionmanager/modules/HA
-ha_DATA = HA/high_availability.php
-endif
-
-EXTRA_DIST = $(scripts_DATA) $(ha_DATA)
+EXTRA_DIST = $(scripts_DATA)
