Feature: path involved can be managed using relative or absolute path

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -25,12 +25,22 @@ enableStdOutput = true
 #outputFilename = ""
 
 
+# Union list
+# each section represent one union destination
+# each section can contain:
+#  -path represent the path where is redirected content.
+#       it can be specified as absolute or relative path
+#  -accept represent regular expression of accepted path
+#  -reject represent regular expression of rejected path
+# a union can have many accept / reject directive but
+# one path
+
 [configuration]
 # represent files involved in the configuration
 #
 
 # path => path to add
-path = /mnt/ulteo/ovd/$PROFILE_ID/conf.Linux
+path = conf.Linux
 
 # accept => path pattern accepted
 accept = "^/\..*"
@@ -58,7 +68,7 @@ reject = ""
 #
 
 # path => path to add
-path = /mnt/ulteo/ovd/$PROFILE_ID/Data
+path = Data
 
 # accept => path pattern accepted
 accept = "%DESKTOP/*"
