Feature: integrate rufs with the File Server

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -83,3 +83,6 @@ level = error warn info debug
 # the local system account to use for storage and permissions
 # default is ovd-fs
 #
+# FSBackendConf =
+# configuration path of the FS Backend (Union FS)
+# defaulf is /etc/ulteo/ovd/FSBackend.conf
