Improvement: switch the default log level to INFO

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -18,7 +18,7 @@ Desktop = "%DESKTOP"
 Document= "%DOCUMENTS"
 
 [log]
-level = DEBUG
+level = INFO
 program = RegularUnionFS
 enableDevelOutput = true
 enableStdOutput = true
