add patch send to support at 2013-02-18 named 'Java applet client with RDP packet compression bug?'

--- a/client/web/config/config.client.ini
+++ b/client/web/config/config.client.ini
@@ -1,6 +1,6 @@
 [rdp]
 # usePacketCompression = true|false
-#  default is true
+#  default is false
 
 # usePersistentCache = true|false
 #  default is false
