Improvement: an union path can now be obtain using an rsync

--- a/ApplicationServer/linux/rufs/conf/CMakeLists.txt
+++ b/ApplicationServer/linux/rufs/conf/CMakeLists.txt
@@ -1,3 +1,2 @@
-install(FILES default.conf DESTINATION "${CONF_PATH}")
-
+install(FILES default.conf profiles_filter.conf DESTINATION "${CONF_PATH}")
 
