--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -28,10 +28,13 @@ enableStdOutput = true
 # Union list
 # each section represent one union destination
 # each section can contain:
-#  -path represent the path where is redirected content.
-#       it can be specified as absolute or relative path
-#  -accept represent regular expression of accepted path
-#  -reject represent regular expression of rejected path
+#  -path:          Represent the path where is redirected content.
+#                   It can be specified as absolute or relative path
+#  -rsync:         Represent the path involved in the data synchronization
+#                   of the initial 'path' content
+#  -rsync_filter:  Represent the filter apply to the rsync command
+#  -accept:        Represent regular expression of accepted path
+#  -reject:        Represent regular expression of rejected path
 # a union can have many accept / reject directive but
 # one path
 
@@ -40,7 +43,12 @@ enableStdOutput = true
 #
 
 # path => path to add
-path = conf.Linux
+path = "/var/spool/ulteo/rufs/$USER/"
+
+# data of the path is inited using the the following source
+rsync = conf.Linux/
+
+rsync_filter = "/etc/ulteo/rufs/profiles_filter.conf"
 
 # accept => path pattern accepted
 accept = "^/\..*"
