Add configuration of rufs FS part

--- a/ApplicationServer/linux/rufs/conf/CMakeLists.txt
+++ b/ApplicationServer/linux/rufs/conf/CMakeLists.txt
@@ -1,2 +1,5 @@
-install(FILES default.conf profiles_filter.conf DESTINATION "${CONF_PATH}")
+install(FILES	default.conf
+		profiles_filter.conf
+		FSBackend.conf
+DESTINATION "${CONF_PATH}")
 
