Improvement: set a more realistic value for share quota

--- a/ApplicationServer/linux/rufs/conf/shares.conf
+++ b/ApplicationServer/linux/rufs/conf/shares.conf
@@ -3,5 +3,5 @@
 #  ex: p_123456,10K,true
 # this file is reloaded each time there is a SIGUSR1
 
-p_1363057573oLspC,100K,true
+p_1363057573oLspC,100M,true
 
