Improvement: pid of the fuse driver can be save in a file

--- a/ApplicationServer/linux/rufs/conf/FSBackend.conf
+++ b/ApplicationServer/linux/rufs/conf/FSBackend.conf
@@ -4,6 +4,10 @@
 # each value imply a dedicated section
 union = real
 
+# specify the location of the file which contain pid of the rufs driver
+# If the parameter is absent, the pid is not saved
+pidFile = /tmp/FSBackend.pid
+
 # file which contain informations about share:
 #  * quota
 #  * activate or not
