Bugfix: solve the bug #140

--- a/OvdServer/examples/apache2.conf
+++ b/OvdServer/examples/apache2.conf
@@ -10,6 +10,7 @@ Listen 1113
 		AuthNAme "WebDAV Storage"
 		AuthType Basic
 		AuthUserFile /var/spool/ulteo/ovd/fs.dav.passwd
+		AuthGroupFile /var/spool/ulteo/ovd/fs.dav.group
 		Require valid-user
 		AllowOverride AuthConfig Limit
 	</Directory>
