Bugfix: add possibility to manage symlink differently. Symlink can not be used with cifs share

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -2,7 +2,7 @@
 # list of path involved in the union
 # separator must be ','.
 # each value imply a dedicated section
-union = configuration, data
+union = configuration, data, volatile
 
 # authorize the mount on no empty directory.
 # the can be mountbind
@@ -45,6 +45,8 @@ enableStdOutput = true
 # path => path to add
 path = "/var/spool/ulteo/rufs/$USER/"
 
+acceptSymlink = true
+
 # data of the path is inited using the the following source
 rsync = conf.Linux/
 
@@ -75,6 +77,9 @@ reject = ""
 # represent user data
 #
 
+# define if we accept symlink in this location
+acceptSymlink = false
+
 # path => path to add
 path = Data
 
@@ -83,4 +88,14 @@ accept = "%DESKTOP/*"
 
 # reject => path pattern rejected
 reject = ""
+
+
+[volatile]
+
+# define if the repository support symlink
+# default is false
+acceptSymlink = true
+deleteOnEnd = true
+
+path = "/var/spool/ulteo/rufs_volatile/$USER/"
 
