Code cleaning: remove useless code

--- a/ApplicationServer/linux/rufs/conf/shares.conf
+++ b/ApplicationServer/linux/rufs/conf/shares.conf
@@ -1,7 +1,5 @@
 # this file contain shares/profiles list
-# for each location, there is two parameter (quota, activation state)
-#  ex: p_123456,10K,true
-# this file is reloaded each time there is a SIGUSR1
-
-p_1363057573oLspC,100M,true
+# for each location, set the quota
+#  ex: p_123456,10K
+# this file is reloaded each time there is a SIGHUP
 
