Bugfix: configuration file is not correct

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -84,10 +84,10 @@ acceptSymlink = false
 path = Data
 
 # accept => path pattern accepted
-accept = "%DESKTOP/*"
+accept = "^/.*"
 
 # reject => path pattern rejected
-reject = ""
+reject = "^/\..*"
 
 
 [volatile]
