Improvement: add a reject rule sample

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -56,7 +56,7 @@ rsync_filter = "/etc/ulteo/rufs/profiles_filter.conf"
 accept = "^/\..*"
 
 # reject => path pattern rejected
-reject = ""
+#reject = "^/\.mozilla.*"
 
 
 # [locale]
