Temporary disable the cached for configuration file

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -46,6 +46,7 @@ enableStdOutput = true
 path = "/var/spool/ulteo/rufs/$USER/"
 
 acceptSymlink = true
+deleteOnEnd = true
 
 # data of the path is inited using the the following source
 rsync = conf.Linux/
